test/arrays/compilerErrors/array-of-generic-class.chpl
class GenericClass { var x; }
var A:[1..10] GenericClass;
