test/arrays/compilerErrors/array-of-generic-class.good
array-of-generic-class.chpl:2: warning: creating an array with element type GenericClass
array-of-generic-class.chpl:2: error: array element type cannot currently be generic
